Fix navbar profile link: left-align name, remove hover underline

--- a/feature-roadmap/src/components/Navbar.css
+++ b/feature-roadmap/src/components/Navbar.css
@@ -87,7 +87,7 @@
 .user-info {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   gap: 2px;
 }
 
@@ -131,6 +131,11 @@
 
 .navbar-profile-link:hover {
   background: var(--color-hover);
+  text-decoration: none;
+}
+
+.navbar-profile-link *{
+  text-decoration: none;
 }
 
 .navbar-avatar {
